--- a/plugin.xml
+++ b/plugin.xml
@@ -1,2 +1,35 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-navigationbar" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android"><name>navigationbar</name><js-module name="navigationbar" src="www/navigationbar.js"><clobbers target="cordova.plugins.navigationbar" /></js-module><platform name="ios"><config-file parent="/*" target="config.xml"><feature name="navigationbar"><param name="ios-package" value="navigationbar" /></feature></config-file><source-file src="src/ios/navigationbar.m" /></platform><platform name="android"><config-file parent="/*" target="res/xml/config.xml"><feature name="navigationbar"><param name="android-package" value="cordova-plugin-navigationbar.navigationbar" /></feature></config-file><config-file parent="/*" target="AndroidManifest.xml"></config-file><source-file src="src/android/navigationbar.java" target-dir="src/cordova-plugin-navigationbar/navigationbar" /></platform></plugin>
+<plugin id="cordova-plugin-navigationbar" version="1.0.0" 
+    xmlns="http://apache.org/cordova/ns/plugins/1.0" 
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <name>navigationbar</name>
+    <js-module name="navigationbar" src="www/navigationbar.js">
+        <clobbers target="cordova.plugins.navigationbar" />
+    </js-module>
+    <platform name="ios">
+        <config-file parent="/*" target="config.xml">
+            <feature name="navigationbar">
+                <param name="ios-package" value="navigationbar" />
+            </feature>
+        </config-file>
+        <source-file src="src/ios/navigationbar.m" />
+        <resource-file src="src/ios/Navigationbar.bundle"/>
+    </platform>
+    <platform name="android">
+        <config-file parent="/*" target="res/xml/config.xml">
+            <feature name="navigationbar">
+                <param name="android-package" value="cn.x1ongzhu.navigationbar.navigationbar" />
+            </feature>
+        </config-file>
+        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <source-file src="src/android/navigationbar.java" target-dir="src/cn/x1ongzhu/navigationbar" />
+        <resource-file src="src/android/res/drawable-hdpi/icon_back_light.png" target="res/drawable-hdpi/icon_back_light.png"/>
+        <resource-file src="src/android/res/drawable-xhdpi/icon_back_light.png" target="res/drawable-xhdpi/icon_back_light.png"/>
+        <resource-file src="src/android/res/drawable-xxhdpi/icon_back_light.png" target="res/drawable-xxhdpi/icon_back_light.png"/>
+        <resource-file src="src/android/res/drawable-xxxhdpi/icon_back_light.png" target="res/drawable-xxxhdpi/icon_back_light.png"/>
+        <resource-file src="src/android/res/drawable-hdpi/icon_back_dark.png" target="res/drawable-hdpi/icon_back_dark.png"/>
+        <resource-file src="src/android/res/drawable-xhdpi/icon_back_dark.png" target="res/drawable-xhdpi/icon_back_dark.png"/>
+        <resource-file src="src/android/res/drawable-xxhdpi/icon_back_dark.png" target="res/drawable-xxhdpi/icon_back_dark.png"/>
+        <resource-file src="src/android/res/drawable-xxxhdpi/icon_back_dark.png" target="res/drawable-xxxhdpi/icon_back_dark.png"/>
+    </platform>
+</plugin>
